examples/good/05-if-else.ps
int num = 5;

if num > 10 {
    println("num > 10");
} else {
    if num > 5 {
        println("num > 5 && <= 10");
    } else {
        println("num too small");
    }
}