examples/bad/static_error_invalid_type_tuple.ps
int f(tuple<string, int> tup) {
    println(tup);
    return 0;
}

f(("hello", "there"));